@@ -1,0 +1,155 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<template>
+    <other include="widget3002">
+        <condition tag="property" attribute="name|widgetPath" />
+        <property name="widgetTarget" tag="property" attribute="name|widgetTarget" />
+        <property name="widgetSort" tag="property" attribute="name|WidgetSort" />
+        <property name="widgetDirection" tag="property" attribute="name|WidgetDirection" />
+        <property name="id" tag="mainmenuid" />
+        <controls>
+            <include content="Widget">
+                <param name="id" value="$PYTHON[int(id) - 1]3002" />
+                <param name="target" value="$SKINSHORTCUTS[widgetTarget]" />
+                <param name="sortby" value="$SKINSHORTCUTS[widgetSort]" />
+                <param name="sortorder" value="$SKINSHORTCUTS[widgetDirection]" />
+                <param name="content" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetPath)" />
+                <param name="aspect" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(WidgetAspect)" />
+                <param name="label" value="$INFO[Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetName)]" />
+                <param name="visible" value="Integer.IsEqual(Container(300).Position,$PYTHON[int(id) - 1])" />
+            </include>
+        </controls>
+    </other>
+    <other include="widget3003">
+        <condition tag="property" attribute="name|widgetPath.Widget1" />
+        <property name="widgetTarget" tag="property" attribute="name|widgetTarget.Widget1" />
+        <property name="widgetSort" tag="property" attribute="name|WidgetSort.Widget1" />
+        <property name="widgetDirection" tag="property" attribute="name|WidgetDirection.Widget1" />
+        <property name="id" tag="mainmenuid" />
+        <controls>
+            <include content="Widget">
+                <param name="id" value="$PYTHON[int(id) - 1]3003" />
+                <param name="target" value="$SKINSHORTCUTS[widgetTarget]" />
+                <param name="sortby" value="$SKINSHORTCUTS[widgetSort]" />
+                <param name="sortorder" value="$SKINSHORTCUTS[widgetDirection]" />
+                <param name="content" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetPath.Widget1)" />
+                <param name="aspect" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(WidgetAspect.Widget1)" />
+                <param name="label" value="$INFO[Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetName.Widget1)]" />
+                <param name="visible" value="Integer.IsEqual(Container(300).Position,$PYTHON[int(id) - 1])" />
+            </include>
+        </controls>
+    </other>
+    <other include="widget3004">
+        <condition tag="property" attribute="name|widgetPath.Widget2" />
+        <property name="widgetTarget" tag="property" attribute="name|widgetTarget.Widget2" />
+        <property name="widgetSort" tag="property" attribute="name|WidgetSort.Widget2" />
+        <property name="widgetDirection" tag="property" attribute="name|WidgetDirection.Widget2" />
+        <property name="id" tag="mainmenuid" />
+        <controls>
+            <include content="Widget">
+                <param name="id" value="$PYTHON[int(id) - 1]3004" />
+                <param name="target" value="$SKINSHORTCUTS[widgetTarget]" />
+                <param name="sortby" value="$SKINSHORTCUTS[widgetSort]" />
+                <param name="sortorder" value="$SKINSHORTCUTS[widgetDirection]" />
+                <param name="content" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetPath.Widget2)" />
+                <param name="aspect" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(WidgetAspect.Widget2)" />
+                <param name="label" value="$INFO[Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetName.Widget2)]" />
+                <param name="visible" value="Integer.IsEqual(Container(300).Position,$PYTHON[int(id) - 1])" />
+            </include>
+        </controls>
+    </other>
+    <other include="widget3005">
+        <condition tag="property" attribute="name|widgetPath.Widget3" />
+        <property name="widgetTarget" tag="property" attribute="name|widgetTarget.Widget3" />
+        <property name="widgetSort" tag="property" attribute="name|WidgetSort.Widget3" />
+        <property name="widgetDirection" tag="property" attribute="name|WidgetDirection.Widget3" />
+        <property name="id" tag="mainmenuid" />
+        <controls>
+            <include content="Widget">
+                <param name="id" value="$PYTHON[int(id) - 1]3005" />
+                <param name="target" value="$SKINSHORTCUTS[widgetTarget]" />
+                <param name="sortby" value="$SKINSHORTCUTS[widgetSort]" />
+                <param name="sortorder" value="$SKINSHORTCUTS[widgetDirection]" />
+                <param name="content" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetPath.Widget3)" />
+                <param name="aspect" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(WidgetAspect.Widget3)" />
+                <param name="label" value="$INFO[Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetName.Widget3)]" />
+                <param name="visible" value="Integer.IsEqual(Container(300).Position,$PYTHON[int(id) - 1])" />
+            </include>
+        </controls>
+    </other>
+    <other include="widget3006">
+        <condition tag="property" attribute="name|widgetPath.Widget4" />
+        <property name="widgetTarget" tag="property" attribute="name|widgetTarget.Widget4" />
+        <property name="widgetSort" tag="property" attribute="name|WidgetSort.Widget4" />
+        <property name="widgetDirection" tag="property" attribute="name|WidgetDirection.Widget4" />
+        <property name="id" tag="mainmenuid" />
+        <controls>
+            <include content="Widget">
+                <param name="id" value="$PYTHON[int(id) - 1]3006" />
+                <param name="target" value="$SKINSHORTCUTS[widgetTarget]" />
+                <param name="sortby" value="$SKINSHORTCUTS[widgetSort]" />
+                <param name="sortorder" value="$SKINSHORTCUTS[widgetDirection]" />
+                <param name="content" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetPath.Widget4)" />
+                <param name="aspect" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(WidgetAspect.Widget4)" />
+                <param name="label" value="$INFO[Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetName.Widget4)]" />
+                <param name="visible" value="Integer.IsEqual(Container(300).Position,$PYTHON[int(id) - 1])" />
+            </include>
+        </controls>
+    </other>
+    <other include="widget3007">
+        <condition tag="property" attribute="name|widgetPath.Widget5" />
+        <property name="widgetTarget" tag="property" attribute="name|widgetTarget.Widget5" />
+        <property name="widgetSort" tag="property" attribute="name|WidgetSort.Widget5" />
+        <property name="widgetDirection" tag="property" attribute="name|WidgetDirection.Widget5" />
+        <property name="id" tag="mainmenuid" />
+        <controls>
+            <include content="Widget">
+                <param name="id" value="$PYTHON[int(id) - 1]3007" />
+                <param name="target" value="$SKINSHORTCUTS[widgetTarget]" />
+                <param name="sortby" value="$SKINSHORTCUTS[widgetSort]" />
+                <param name="sortorder" value="$SKINSHORTCUTS[widgetDirection]" />
+                <param name="content" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetPath.Widget5)" />
+                <param name="aspect" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(WidgetAspect.Widget5)" />
+                <param name="label" value="$INFO[Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetName.Widget5)]" />
+                <param name="visible" value="Integer.IsEqual(Container(300).Position,$PYTHON[int(id) - 1])" />
+            </include>
+        </controls>
+    </other>
+    <other include="widget3008">
+        <condition tag="property" attribute="name|widgetPath.Widget6" />
+        <property name="widgetTarget" tag="property" attribute="name|widgetTarget.Widget6" />
+        <property name="widgetSort" tag="property" attribute="name|WidgetSort.Widget6" />
+        <property name="widgetDirection" tag="property" attribute="name|WidgetDirection.Widget6" />
+        <property name="id" tag="mainmenuid" />
+        <controls>
+            <include content="Widget">
+                <param name="id" value="$PYTHON[int(id) - 1]3008" />
+                <param name="target" value="$SKINSHORTCUTS[widgetTarget]" />
+                <param name="sortby" value="$SKINSHORTCUTS[widgetSort]" />
+                <param name="sortorder" value="$SKINSHORTCUTS[widgetDirection]" />
+                <param name="content" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetPath.Widget6)" />
+                <param name="aspect" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(WidgetAspect.Widget6)" />
+                <param name="label" value="$INFO[Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetName.Widget6)]" />
+                <param name="visible" value="Integer.IsEqual(Container(300).Position,$PYTHON[int(id) - 1])" />
+            </include>
+        </controls>
+    </other>
+    <other include="widget3009">
+        <condition tag="property" attribute="name|widgetPath.Widget7" />
+        <property name="widgetTarget" tag="property" attribute="name|widgetTarget.Widget7" />
+        <property name="widgetSort" tag="property" attribute="name|WidgetSort.Widget7" />
+        <property name="widgetDirection" tag="property" attribute="name|WidgetDirection.Widget7" />
+        <property name="id" tag="mainmenuid" />
+        <controls>
+            <include content="Widget">
+                <param name="id" value="$PYTHON[int(id) - 1]3009" />
+                <param name="target" value="$SKINSHORTCUTS[widgetTarget]" />
+                <param name="sortby" value="$SKINSHORTCUTS[widgetSort]" />
+                <param name="sortorder" value="$SKINSHORTCUTS[widgetDirection]" />
+                <param name="content" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetPath.Widget7)" />
+                <param name="aspect" value="Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(WidgetAspect.Widget7)" />
+                <param name="label" value="$INFO[Container(300).ListItemAbsolute($PYTHON[int(id) - 1]).Property(widgetName.Widget7)]" />
+                <param name="visible" value="Integer.IsEqual(Container(300).Position,$PYTHON[int(id) - 1])" />
+            </include>
+        </controls>
+    </other>
+</template>
