@@ -1,3 +1,6 @@
+[B]0.9.3[/B]
+Update widget code to use skinshortcut templates
+
 [B]0.9.2[/B]
 Fix focus on re-entering home screen
 Fix (hopefully) widget loading
